--- a/src/styles/Page/SendPassWordStyles.module.css
+++ b/src/styles/Page/SendPassWordStyles.module.css
@@ -4,22 +4,21 @@
 }
 .formContainer {
     display: flex;
-    justify-content: space-around;
+    width: 100%;
+    height: 100%;
     align-items: center;
-    flex-direction: row;
+    justify-content: center;
     padding-top: 25px;
     padding-bottom: 25px;
 }
 .form {
-    margin-top: 20px;
-    margin-bottom: 20px;
     background-color: #eaf0f0;
     padding: 30px;
     margin-top: 40px;
     margin-left: 60px;
     margin-right: 60px;
     border-radius: 15px;
-    width: 100%;
+    width: 50%;
     box-shadow: 0px 5px 10px -5px #363e3e;
 }
 .header {
@@ -75,47 +74,4 @@
     transition: 0.2s;
     height: 40px;
     border-radius: 15px;
-}
-.rulesText {
-    width: 80%;
-    text-align: left;
-    color: #9ca6a9;
-    font-size: 12px;
-}
-.button {
-    box-shadow: 0px 5px 10px -5px #363e3e;
-    text-align: center;
-    justify-content: center;
-    align-items: center;
-    padding: 20px;
-    padding-left: 40px;
-    padding-right: 40px;
-    width: 100%;
-    transition: 0.2s;
-    cursor: pointer;
-    border-radius: 15px;
-    border: none;
-    background-color: #03989E;
-    outline: none;
-    text-decoration: none;
-    color: #f7fbfc;
-}
-.button:hover {
-    transform: translateY(-5px);
-    box-shadow: 0px 5px 10px -5px #363e3e;
-}
-.link {
-    text-align: center;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-    margin-top: 10px;
-    border: none;
-    outline: none;
-    text-decoration: none;
-    background-color: #eaf0f0;
-    color: #03989E;
-}
-.link:hover {
-    color: #363e3e;
 }
