--- a/src/styles/Components/NavBarStyles.module.css
+++ b/src/styles/Components/NavBarStyles.module.css
@@ -4,24 +4,22 @@
     flex-direction: row;
     justify-content: center;
 }
-
 .root .disconnectContainer {
     justify-content: center;
     align-items: center;
     background-color: #eaf0f0;
     border-radius: 10px;
-    padding: 13px;
+    padding: 15px;
     position: absolute;
     right: 6%;
+    cursor: pointer;
     top: 5%;
     display: flex;
     flex-direction: row;
 }
-
 .root .disconnectContainer:hover {
     background-color: #cfd4d4;
 }
-
 .root .linkContainer {
     width: 40%;
     padding: 10px;
@@ -32,7 +30,6 @@
     border-radius: 15px;
     background-color: #eaf0f0;
 }
-
 .root .linkContainer .link {
     color: #363e3e;
     display: flex;
@@ -47,12 +44,10 @@
     color: #03989E;
     transform: translateY(-3px);
 }
-
 .root .linkContainer .link .logo {
     height: 60px;
     width : 60px;
 }
-
 .root .linkContainer .link p {
     margin-top: 0px;
     margin-bottom: 0px;
@@ -60,4 +55,21 @@
 .link {
     text-decoration: none;
     color: #363e3e;
+}
+.root .usersButtonContainer {
+    justify-content: center;
+    align-items: center;
+    background-color: #eaf0f0;
+    border-radius: 10px;
+    cursor: pointer;
+    padding: 15px;
+    position: absolute;
+    right: 10%;
+    top: 5%;
+    display: flex;
+    flex-direction: row;
+}
+
+.root .usersButtonContainer:hover {
+    background-color: #cfd4d4;
 }
