--- a/src/styles/Page/UserDetailStyles.module.css
+++ b/src/styles/Page/UserDetailStyles.module.css
@@ -67,3 +67,15 @@
 .wrapperContainer {
     column-count: 2;
 }
+.lineTitleLikeContainer {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+}
+.likeButtonContainer {
+    display: flex;
+    margin: 0px 20px 0px 25px;
+    cursor: pointer;
+}
